--- a/config.json
+++ b/config.json
@@ -5,6 +5,12 @@
         "time": ["8:30","22:00"],
         "roomid":"5483",
         "seatid":["038"]
+    },
+        {"username": "xxxxxxxxxxx",
+        "password": "xxxxxxxxx",
+        "time": ["8:30","22:00"],
+        "roomid":"5483",
+        "seatid":["039"]
     }
     ]
 }
