--- a/config.json
+++ b/config.json
@@ -2,9 +2,9 @@
     "reserve": [
         {"username": "xxxxxxxxxxx",
         "password": "xxxxxxxxx",
-        "time": ["8:30","22:00"],
+        "time": ["14:00","22:00"],
         "roomid":"5483",
-        "seatid":["038"]
+        "seatid":["xxx"]
     },
         {"username": "xxxxxxxxxxx",
         "password": "xxxxxxxxx",
