--- a/config.json
+++ b/config.json
@@ -4,7 +4,13 @@
         "password": "xxxxxxxxx",
         "time": ["8:30","22:00"],
         "roomid":"5483",
-        "seatid":["036"]
-    }
+        "seatid":["038"]
+    },
+        {"username": "xxxxxxxxxxx",
+        "password": "xxxxxxxxx",
+        "time": ["9:30","22:00"],
+        "roomid":"5483",
+        "seatid":["039"]
+    },
     ]
 }
